@@ -28,6 +28,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import javax.annotation.Nonnull;
+
 import org.csstudio.archive.sdds.server.command.header.DataRequestHeader;
 import org.csstudio.archive.sdds.server.data.EpicsRecordData;
 import org.csstudio.archive.sdds.server.util.DataException;
@@ -43,7 +45,7 @@ import org.slf4j.LoggerFactory;
  * @version
  * @since 15.02.2011
  */
-public class TailRawHandler extends AlgorithmHandler {
+public class TailRawHandler extends AbstractAlgorithmHandler {
 
     /** The logger for this class */
     private static final Logger LOG = LoggerFactory.getLogger(TailRawHandler.class);
@@ -54,16 +56,18 @@ public class TailRawHandler extends AlgorithmHandler {
     }
 
     /**
-     * @see org.csstudio.archive.sdds.server.conversion.handler.AlgorithmHandler#handle(org.csstudio.archive.sdds.server.command.header.DataRequestHeader, org.csstudio.archive.sdds.server.data.EpicsRecordData[])
+     * @see org.csstudio.archive.sdds.server.conversion.handler.AbstractAlgorithmHandler#handle(org.csstudio.archive.sdds.server.command.header.DataRequestHeader, org.csstudio.archive.sdds.server.data.EpicsRecordData[])
      */
     @Override
-    public Iterable<EpicsRecordData> handle(final DataRequestHeader header, final EpicsRecordData[] data)
+    @Nonnull
+    public List<EpicsRecordData> handle(@Nonnull final DataRequestHeader header,
+                                        @Nonnull final EpicsRecordData[] data)
     throws DataException, AlgorithmHandlerException, MethodNotImplementedException {
 
         if (data == null) {
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         } else if (data.length == 0){
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         }
 
         final long intervalStart = header.getFromSec();
@@ -72,8 +76,9 @@ public class TailRawHandler extends AlgorithmHandler {
         // Get the number of requested samples
         int resultLength = header.getMaxNumOfSamples();
 
-        if(resultLength > this.maxSamplesPerRequest) {
-            resultLength = this.maxSamplesPerRequest;
+        final int maxSamplesPerRequest = getMaxSamplesPerRequest();
+        if(resultLength > maxSamplesPerRequest) {
+            resultLength = maxSamplesPerRequest;
         }
 
         if(resultLength > data.length) {
@@ -92,7 +97,7 @@ public class TailRawHandler extends AlgorithmHandler {
                 final EpicsRecordData obj = new EpicsRecordData(data[dataIndex].getTime(),
                                                           data[dataIndex].getNanoSeconds(),
                                                           data[dataIndex].getStatus(),
-                                                          new Double((Float)data[dataIndex].getValue()));
+                                                          Double.valueOf((Float) data[dataIndex].getValue()));
 
                 newData.add(obj);
             }
